# cwrs

./: README.md  build.apps  build.cloudinfra  build.media  build.nids  build.os  build.platform  build.tools  buildclean  buildnet  buildwebsql  create_iso  create_usb_iso  packages_definitions
linux/: config  (+1 more)
lxde/lxconf/src/: Makefile.am  lxconf-send.c  lxconfd.c
lxde/lxconf/src/lxconf/: lxconf-client.h  lxconf-db.h
lxde/lxdm/: INSTALL  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
lxde/lxdm/data/: Makefile.in  Xsession  lxdm.conf.in
lxde/lxdm/pam/: Makefile.in
lxde/lxdm/po/: af.po  ca.po  cs.po  de.po  el.po  es_VE.po  hu.po  id.po  ja.po  lxdm.pot  pl.po  sv.po  tr.po  vi.po
lxde/lxdm/src/: Makefile.am  Makefile.in  greeter.c  lang.c  lxdm.c  lxdm.h  ui.c
lxde/lxnm/: Makefile.am  configure.ac  protocols
lxde/lxnm/data/: devlist.sh.in  ethinfo.sh  modeminfo.sh.in  pppinfo.sh  wifiscan.sh
lxde/lxnm/man/: Makefile.am
lxde/lxnm/src/: Makefile.am  device.c  lxnm.c  misc.c  modem.c  modem.h
lxde/lxnm/utils/: Makefile.am  lxnetctl.c
lxde/lxpanel-plugins/drives/: Makefile.am  configure
lxde/lxpanel-plugins/drives/po/: bg.po  bn_IN.po  de.po  gl.po  he.po  hu.po  it.po  ja.po  ur.po
lxde/lxpanel-plugins/xkb/src/: Makefile.am  Makefile.in
tpd/apps/sg/src/: Makefile.am  Makefile.in  dhcp-server.c  dhcp-server.h  firestarter.c  firestarter.h  globals.h  gui.c  gui.h  hitview.c  hitview.h  logread.h  menus.c  menus.h  netfilter-script.c  netfilter-script.h  policyview.c  policyview.h  preferences.c  preferences.h  savelog.c  savelog.h  scriptwriter.c  scriptwriter.h  service.h  statusview.c  statusview.h  tray.c  tray.h  util.c  util.h  wizard-choices.h  wizard.c  wizard.h
tpd/display/Mesa/: Makefile.in  config.h.in  configure  configure.ac
tpd/display/Mesa/src/: Makefile.in
tpd/display/at-spi/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  at-spi.schemas.in  config.h.in  configure  configure.in  libloginhelper-1.0-uninstalled.pc.in
tpd/display/at-spi/atk-bridge/: Makefile.am  Makefile.in  bridge.c
tpd/display/at-spi/cspi/: Makefile.am  Makefile.in  spi.h  spi_accessible.c  spi_application.c  spi_component.c  spi_hyperlink.c  spi_main.c  spi_registry.c
tpd/display/at-spi/docs/: Makefile.in
tpd/display/at-spi/idl/: Accessibility_Application.idl  Accessibility_Relation.idl  Accessibility_Text.idl  Makefile.in
tpd/display/at-spi/libspi/: Makefile.am  Makefile.in  accessible.c  base.h  collection.c  document.c  listener.c  relation.c  spi-private.h  text.c  util.c
tpd/display/at-spi/login-helper/: Makefile.in
tpd/display/at-spi/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  kk.po  kn.po  ko.po  (+34 more)
tpd/display/at-spi/pyatspi/: ChangeLog  Makefile.am  Makefile.in  __init__.py  __init__.py.in
tpd/display/at-spi/registryd/: Makefile.am  Makefile.in  at-spi-registryd.desktop.in.in.in  desktop.c  deviceeventcontroller.c  deviceeventcontroller.h  registry-main.c  registry.c  registry.h
tpd/display/at-spi/test/: Makefile.in  keysynth-demo.c  login-helper-server-test.c  test-simple.c
tpd/display/libXaw3d/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  xaw3d.pc.in
tpd/display/libXaw3d/include/: Makefile.am  Makefile.in
tpd/display/libXaw3d/src/: AllWidgets.c  AsciiSink.c  AsciiSrc.c  AsciiText.c  Box.c  Command.c  Dialog.c  Form.c  Grip.c  Label.c  LayYY.h  Layout.c  List.c  Makefile.am  Makefile.in  MenuButton.c  MultiSink.c  MultiSrc.c  Paned.c  Panner.c  Porthole.c  Repeater.c  Scrollbar.c  Simple.c  SimpleMenu.c  Sme.c  SmeBSB.c  SmeLine.c  SmeThreeD.c  StripChart.c  Template.c  Text.c  TextAction.c  TextPop.c  TextSink.c  TextSrc.c  TextTr.c  ThreeD.c  Tip.c  Toggle.c  (+14 more)
tpd/display/libbonobo/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in  libbonobo-zip.in
tpd/display/libbonobo/activation-server/: Bonobo_CosNaming_NamingContext.server.in.in  Makefile.am  Makefile.in  README  activation-context-corba.c  activation-context-query.c  activation-server-corba-extensions.c  activation-server-main.c  bonobo-activation-server.1  client.c  object-directory-activate.c  object-directory-config-file.c  object-directory-corba.c  object-directory-load.c  object-directory.h  server.h  test-performance.c
tpd/display/libbonobo/bonobo/: Makefile.am  Makefile.in  bonobo-app-client.c  bonobo-application.c  bonobo-arg.c  bonobo-debug.c  bonobo-debug.h  bonobo-event-source.c  bonobo-exception.c  bonobo-foreign-object.c  bonobo-generic-factory.c  bonobo-item-container.c  bonobo-item-handler.c  bonobo-listener.c  bonobo-main.c  bonobo-moniker-extender.c  bonobo-moniker-simple.c  bonobo-moniker-util.c  bonobo-moniker.c  bonobo-object.c  bonobo-private.h  bonobo-property-bag-client.c  bonobo-property-bag.c  bonobo-running-context.c  bonobo-running-context.h  bonobo-shlib-factory.c  bonobo-storage-memory.c  bonobo-stream-client.c  bonobo-stream-memory.c  bonobo-types.c  libbonobo-2.0-uninstalled.pc.in  libbonobo-2.0.pc.in
tpd/display/libbonobo/bonobo-activation/: Makefile.am  Makefile.in  bonobo-activation-2.0-uninstalled.pc.in  bonobo-activation-2.0.pc.in  bonobo-activation-activate.c  bonobo-activation-base-service.c  bonobo-activation-client.c  bonobo-activation-client.h  bonobo-activation-fork-server.c  bonobo-activation-get-language-list.c  bonobo-activation-init.c  bonobo-activation-mime.c  bonobo-activation-private.h  bonobo-activation-register.c  bonobo-activation-shlib.c
tpd/display/libxklavier/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libxklavier.pc.in  libxklavier.spec  libxklavier.spec.in
tpd/display/upower/: Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
(+4666 files in other folders)
