xaw3dincludedir=${includedir}/X11/Xaw3d

if XAW_INTERNATIONALIZATION
I18N_HDRS = \
       X11/Xaw3d/MultiSrc.h \
       X11/Xaw3d/MultiSrcP.h \
       X11/Xaw3d/MultiSink.h \
       X11/Xaw3d/MultiSinkP.h \
       X11/Xaw3d/VendorEP.h \
       X11/Xaw3d/XawImP.h
endif

xaw3dinclude_HEADERS = \
	X11/Xaw3d/AllWidgets.h \
	X11/Xaw3d/AsciiSink.h \
	X11/Xaw3d/AsciiSinkP.h \
	X11/Xaw3d/AsciiSrc.h \
	X11/Xaw3d/AsciiSrcP.h \
	X11/Xaw3d/AsciiText.h \
	X11/Xaw3d/AsciiTextP.h \
	X11/Xaw3d/Box.h \
	X11/Xaw3d/BoxP.h \
	X11/Xaw3d/Cardinals.h \
	X11/Xaw3d/Command.h \
	X11/Xaw3d/CommandP.h \
	X11/Xaw3d/Dialog.h \
	X11/Xaw3d/DialogP.h \
	X11/Xaw3d/Form.h \
	X11/Xaw3d/FormP.h \
	X11/Xaw3d/Grip.h \
	X11/Xaw3d/GripP.h \
	X11/Xaw3d/Label.h \
	X11/Xaw3d/LabelP.h \
	X11/Xaw3d/Layout.h \
	X11/Xaw3d/LayoutP.h \
	X11/Xaw3d/List.h \
	X11/Xaw3d/ListP.h \
	X11/Xaw3d/MenuButton.h \
	X11/Xaw3d/MenuButtoP.h \
	X11/Xaw3d/Paned.h \
	X11/Xaw3d/PanedP.h \
	X11/Xaw3d/Panner.h \
	X11/Xaw3d/PannerP.h \
	X11/Xaw3d/Porthole.h \
	X11/Xaw3d/PortholeP.h \
	X11/Xaw3d/Repeater.h \
	X11/Xaw3d/RepeaterP.h \
	X11/Xaw3d/Reports.h \
	X11/Xaw3d/Scrollbar.h \
	X11/Xaw3d/ScrollbarP.h \
	X11/Xaw3d/Simple.h \
	X11/Xaw3d/SimpleMenP.h \
	X11/Xaw3d/SimpleMenu.h \
	X11/Xaw3d/SimpleP.h \
	X11/Xaw3d/SmeBSB.h \
	X11/Xaw3d/SmeBSBP.h \
	X11/Xaw3d/Sme.h \
	X11/Xaw3d/SmeLine.h \
	X11/Xaw3d/SmeLineP.h \
	X11/Xaw3d/SmeP.h \
	X11/Xaw3d/SmeThreeD.h \
	X11/Xaw3d/SmeThreeDP.h \
	X11/Xaw3d/StripCharP.h \
	X11/Xaw3d/StripChart.h \
	X11/Xaw3d/Text.h \
	X11/Xaw3d/TextP.h \
	X11/Xaw3d/TextSink.h \
	X11/Xaw3d/TextSinkP.h \
	X11/Xaw3d/TextSrc.h \
	X11/Xaw3d/TextSrcP.h \
	X11/Xaw3d/ThreeD.h \
	X11/Xaw3d/ThreeDP.h \
	X11/Xaw3d/Tip.h \
	X11/Xaw3d/TipP.h \
	X11/Xaw3d/Toggle.h \
	X11/Xaw3d/ToggleP.h \
	X11/Xaw3d/Tree.h \
	X11/Xaw3d/TreeP.h \
	X11/Xaw3d/Viewport.h \
	X11/Xaw3d/ViewportP.h \
	X11/Xaw3d/Xaw3dP.h \
	X11/Xaw3d/XawInit.h \
	$(I18N_HDRS)

EXTRA_DIST = \
	X11/Xaw3d/Template.h \
	X11/Xaw3d/TemplateP.h